# ShellOS---OS-made-Just-For-ESP32-Boards

./: .gitignore  CMakeLists.txt  LICENSE  PACKAGES.md  README.md  partitions.csv  phases.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6
.github/workflows/: build.yml
components/: CMakeLists.txt
components/drivers/: cam_driver.c  cam_driver.h  cam_driver_stub.c  uart_driver.c  uart_driver.h  wifi_driver.c  wifi_driver.h
components/fs/: shell_fs.c  shell_fs.h
components/lua_runtime/: lua_runtime.c  lua_runtime.h
components/lua_runtime/api/: lua_api_fs.c  lua_api_fs.h  lua_api_gpio.c  lua_api_gpio.h  lua_api_http.c  lua_api_http.h  lua_api_log.c  lua_api_log.h  lua_api_serial.c  lua_api_serial.h  lua_api_timer.c  lua_api_timer.h
components/pkg_manager/: pkg_manager.c  pkg_manager.h  shpkg.c  shpkg.h
components/shell/: commands.c  commands.h  http_fetch.c  http_fetch.h  http_upload.c  http_upload.h  kernel.c  kernel.h  netsh_server.c  netsh_server.h  shell.c  shell.h  shell_io.c  shell_io.h  shell_theme.h
docs/: index.html
imager/: .gitignore  README.md  START_ShellOS_Imager.bat  build_exe.bat  requirements.txt  shellos_imager.py
imager/firmware/: README.txt
main/: CMakeLists.txt  idf_component.yml  main.c
tools/: get_lua.py
tools/example_packages/: blink_led.ino  blink_led_esp32c6.ino  hello_pkg.ino  parallel_test.ino
tools/shellos_compiler/: shellos_compiler.py
